# mnemonic

./: .gitignore  README.md  pyproject.toml
.github/workflows/: app-ci.yml  build-android-template.yml  cd-for-main.yml  ci-for-any-pr.yml
docs/: .gitignore
patches/: krkrsdl2-alpha-transparency.patch
src/mnemonic/: __init__.py  cache.py  cli.py  config.py  doctor.py  info.py  logger.py  pipeline.py  types.py
src/mnemonic/builder/: __init__.py  apk_merge.py  font_fetcher.py  gradle.py  plugin_fetcher.py  sdl2_sources.py  template.py  template_preparer.py
src/mnemonic/converter/: __init__.py  base.py  encoding.py  image.py  manager.py  midi.py  script.py  video.py
src/mnemonic/converter/tlg/: __init__.py  lzss.py  tlg5.py  tlg6.py
src/mnemonic/parser/: __init__.py  assets.py  detector.py  exe.py  icon.py  xp3.py
src/mnemonic/resources/system_polyfill/: KAGParser.tjs  MIDISoundBuffer_stub.tjs  MenuItem_stub.tjs  PolyfillInitialize.tjs  (+2 more)
src/mnemonic/signer/: __init__.py  apk.py
tests/: __init__.py  test_cache.py  test_cli.py  test_cli_cache.py  test_config.py  test_doctor.py  test_info.py  test_logger.py  test_pipeline.py
tests/builder/: test_apk_merge.py  test_assets_place.py  test_font_fetcher.py  test_gradle_build.py  test_plugin_fetcher.py  test_project_generate.py  test_sdl2_sources.py  test_template_cache.py  test_template_download.py  test_template_preparer.py
tests/converter/: __init__.py  test_base.py  test_encoding.py  test_image.py  test_manager.py  test_midi.py  test_script.py  test_video.py
tests/converter/tlg/: __init__.py  test_lzss.py  test_tlg5.py  test_tlg6.py
tests/e2e/: __init__.py  conftest.py  test_build_e2e.py
tests/fixtures/: mnemonic_partial.yml  mnemonic_valid.yml
tests/fixtures/e2e/: README.md  encrypted.xp3
tests/fixtures/encoding/: shift_jis.txt  utf8.txt  utf8_bom.txt
tests/parser/: __init__.py  test_assets.py  test_detector.py  test_exe_extractor.py  test_icon.py  test_xp3.py  test_xp3_encryption.py
tests/signer/: __init__.py  test_apksigner.py  test_password.py  test_zipalign.py
(+7 files in other folders)
